Deleted console logs and fixed mangapage header issue

--- a/mangadb/src/css/mangapage.css
+++ b/mangadb/src/css/mangapage.css
@@ -1,78 +1,81 @@
-.column{
-    display: flex;
-    align-items: left;
-    padding: 20px;
-     width: 100%;
-   background-image:linear-gradient(to right, #16222a, #3a6073);
-    
+.column {
+  display: flex;
+  align-items: left;
+  padding: 20px;
+  width: 100%;
+  background-image: linear-gradient(to right, #16222a, #3a6073);
 }
-   .left-image{
-    float: left;
-    margin-top: 50px;
-    margin-left:20px;
-    margin-right: 20px;
-    flex-direction: column;
-   }
-   .ReadMangaButton{
-    margin-top: 20px;
-    max-width: 200px;
-    max-height: 50px;
-    margin-left: 20px;
-   }
-   .description{
-       font-size: 25px;
-       color: white;
-       text-overflow:ellipsis;
-       overflow:hidden;
-       display: -webkit-box !important;
-       -webkit-line-clamp: 4;
-       -webkit-box-orient: vertical;
-       white-space: normal;
-       text-align: left;
-   }
-   .genre{
-       font-size: 25px;
-       margin-right: 10px;
-   }
-   #orderSelect {
-       background-color: #10a7c2;
-       color: whitesmoke;
-       margin-left: 10px;
-       padding: 5px;
-       font-size: 20px;
-       border-radius: 5px;
-       width: 200px;
-   }
-   
-   #firstPage{
-       margin: 0px;
-       background-color: #10a7c2;
-       color: white;
-      
-       margin-left: 10px;
-       font-size: 25px;
-       border-radius: 5px;
-       width: 200px;
-       font-weight: normal;
-       height: 42px;
-   }
-   #firstPage:hover{
-       background-color: peru;
-   }
+.left-image {
+  float: left;
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  flex-direction: column;
+}
+.ReadMangaButton {
+  margin-top: 20px;
+  max-width: 200px;
+  max-height: 50px;
+  margin-left: 20px;
+}
+.description {
+  font-size: 25px;
+  color: white;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  text-align: left;
+}
+.genre {
+  font-size: 25px;
+  margin-right: 10px;
+}
+#orderSelect {
+  background-color: #10a7c2;
+  color: whitesmoke;
+  margin-left: 10px;
+  padding: 5px;
+  font-size: 20px;
+  border-radius: 5px;
+  width: 200px;
+}
 
+#firstPage {
+  margin: 0px;
+  background-color: #10a7c2;
+  color: white;
 
-   #addToFavesButton {
-    margin: 0px;
-    background-color: #10a7c2;
-    color: white;
-    
-    margin-left: 10px;
-    font-size: 25px;
-    border-radius: 5px;
-    width: 250px;
-    font-weight: normal;
-    height: 42px;
+  margin-left: 10px;
+  font-size: 25px;
+  border-radius: 5px;
+  width: 200px;
+  font-weight: normal;
+  height: 42px;
+}
+#firstPage:hover {
+  background-color: peru;
+}
+
+#addToFavesButton {
+  margin: 0px;
+  background-color: #10a7c2;
+  color: white;
+
+  margin-left: 10px;
+  font-size: 25px;
+  border-radius: 5px;
+  width: 250px;
+  font-weight: normal;
+  height: 42px;
 }
 #addToFavesButton:hover {
-    background-color: peru;
+  background-color: peru;
+}
+
+#gradient-gray {
+  background-image: linear-gradient(to right, #16222a, #3a6073);
+  height: 100%;
 }
